--- a/main.css
+++ b/main.css
@@ -82,7 +82,7 @@ nav .links {
                Start Hero
 *************************************/
 .hero {
-   padding-top: 3rem;
+   padding-top: 2.5rem;
    margin: 0;
    display: flex;
    align-items: center;
@@ -140,7 +140,7 @@ nav .links {
 
 .hero .start input:nth-child(2) {
    width: 35%;
-   padding: .75rem 2rem;
+   padding: 3rem 2rem;
    font-family: 'Open Sans', sans-serif;
    font-size: 10pt;
    font-weight: 700;
@@ -489,7 +489,7 @@ article .footer .avatar img {
 
 #access .start input:nth-child(2) {
    width: 50%;
-   padding: .75rem 2rem;
+   padding: 3rem 2rem;
    margin-top: 15px;
    font-family: 'Open Sans', sans-serif;
    font-size: 10pt;
